RESOLVED FIXED275201
HTMLCanvasElement inflates all invalidation rects with 2d context reasons
https://bugs.webkit.org/show_bug.cgi?id=275201
Summary HTMLCanvasElement inflates all invalidation rects with 2d context reasons
Kimmo Kinnunen
Reported 2024-06-06 01:43:27 PDT
HTMLCanvasElement inflates all invalidation rects with 2d context reasons
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-06 01:43:55 PDT
Kimmo Kinnunen
Comment 2 2024-06-06 01:47:11 PDT
EWS
Comment 3 2024-06-06 02:44:21 PDT
Committed 279769@main (0f72f0cc0aaa): <https://commits.webkit.org/279769@main> Reviewed commits have been landed. Closing PR #29533 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.