HTMLCanvasElement inflates all invalidation rects with 2d context reasons https://bugs.webkit.org/show_bug.cgi?id=275201 rdar://129327186

Reviewed by Said Abou-Hallawa.

This is problematic because:
- Not all contexts need this (WebGL, WebGPU, ImageRenderer)
- It uses HTMLCanvasElement::drawingContext function, which should
  belong to CanvasRenderingContext2DBase.

Move the inflation logic to CanvasRenderingContext2DBase.

* Source/WebCore/html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::didDraw):
* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::didDraw):

Canonical link: https://commits.webkit.org/279769@main