Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp
@@ -2336,6 +2336,10 @@ void CanvasRenderingContext2DBase::didDraw(std::optional<FloatRect> rect, Option
         dirtyRect.unite(shadowRect);
     }
 
+    // Inflate dirty rect to cover antialiasing on image buffers.
+    if (drawingContext()->shouldAntialias())
+        dirtyRect.inflate(1);
+
     // FIXME: This does not apply the clip because we have no way of reading the clip out of the GraphicsContext.
     if (m_dirtyRect.contains(dirtyRect))
         canvasBase().didDraw(std::nullopt, shouldApplyPostProcessing);
